<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/retroContainer"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/gradient"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/app_name"
            android:src="@drawable/ic_logo"
            android:tint="@color/color2" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/color1"
            android:textSize="40sp"
            android:textStyle="italic" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_reset"
            android:contentDescription="@string/context_Reset"
            android:hapticFeedbackEnabled="true"
            android:onClick="destroyScore" />

        <Switch
            android:id="@+id/switch_retro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:checked="false"
            android:hapticFeedbackEnabled="true"
            android:text="@string/retro_mode"
            android:textColor="@color/color5"
            android:thumb="@drawable/switch_thumb" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/team_1"
        style="@style/retroTeamOne">

        <EditText
            android:id="@+id/name_team_1"
            style="@style/ScoreTextTeam"
            android:hint="@string/hint_team_name_1" />

        <TextView
            android:id="@+id/score_team_1"
            style="@style/ScoreTextCounter"
            android:text="@string/team_1_score" />

        <ImageButton
            android:id="@+id/decrease_team_1"
            style="@style/ScoreDecrement"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:hapticFeedbackEnabled="true"
            android:onClick="decreaseScoreTeam" />

        <ImageButton
            android:id="@+id/increase_team_1"
            style="@style/ScoreIncrement"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hapticFeedbackEnabled="true"
            android:onClick="increaseScoreTeam" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/team_2"
        style="@style/retroTeamTwo">


        <EditText
            android:id="@+id/name_team_2"
            style="@style/ScoreTextTeam"
            android:hint="@string/hint_team_name_2" />

        <TextView
            android:id="@+id/score_team_2"
            style="@style/ScoreTextCounter"
            android:text="@string/team_2_score" />

        <ImageButton
            android:id="@+id/decrease_team_2"
            style="@style/ScoreDecrement"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:hapticFeedbackEnabled="true"
            android:onClick="decreaseScoreTeam" />

        <ImageButton
            android:id="@+id/increase_team_2"
            style="@style/ScoreIncrement"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hapticFeedbackEnabled="true"
            android:onClick="increaseScoreTeam" />

    </RelativeLayout>

</LinearLayout>